--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,7 +86,7 @@
     font-family: 'Indie Flower', cursive;
     font-size:4em;
   }
-  
+
   .img-portfolio {
     height: 180px;
     width: 240px;
@@ -96,6 +96,7 @@
     transition: transform 500ms;
   }
 
+ 
   .img-portfolio:hover {
     transform: scale(1,2)
   }
@@ -123,24 +124,66 @@
     }
   }
   
-  
+  .contato
+  .sobre
   .portfolio{
     padding: 3em;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .portfolio figure{
     text-align: center;
   }
 
+  .sobre h2,
   .contato h2,
   .portfolio h2{
     font-size: 2em;
   text-align: center;
+  margin-bottom: 1em;
   }
-  
+
+  .sobre p{
+    color: white;
+    margin-bottom: 1em;
+    text-indent: 3em;
+    text-align: justify; 
+  }
+
+  @media (min-width:1200px){
+  .container {max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  }
+ 
+  .sobre{
+    margin-bottom: 25vh;
+  }
+
+  .img-sobre{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2em;}
+
+@media (min-width:560px){
+.sobre .img-sobre img {
+   clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+}
+.img-sobre{
+  float: right;
+  margin-left: 2em;
+  margin-bottom: 2em;
+}
+
+}
+
+
   .contato a{
     text-decoration: none;
     color: white;
